(fix) detailed status timeline not showing color

--- a/app/javascript/styles/mastodon-light/diff.scss
+++ b/app/javascript/styles/mastodon-light/diff.scss
@@ -270,6 +270,10 @@ html {
   background: $ui-base-color;
 }
 
+.status__wrapper {
+  background: $white;
+}
+
 .detailed-status,
 .detailed-status__action-bar {
   background: $white;
